--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+      <video src="/resources/videos/excursion.mp4" height="240" width="320" autoplay>Video not supported</video>
 
   </body>
 </html>
