Add images and text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,28 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
-      <video autoplay muted loop> <source src="./resources/videos/excursion.mp4"> Video not supported</video>
+
+    <div class="video">
+    <video autoplay muted loop> <source src="./resources/videos/excursion.mp4"> Video not supported</video>
+    </div>
+
+    <h2>Your personal travel guide</h2>
+
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+
+    <img src="./resources/images/tents.jpg">
+    <br>
+    <br>
+    <img src="./resources/images/phone.png">
+
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
+
 
   </body>
 </html>
